tests/ui-rustc-1-95/g-route-unprojectable.stderr
error[E0080]: evaluation panicked: Route unprojectable for this role: invalid, ambiguous endpoint operation, or ambiguous first-visible endpoint operation
 --> src/g.rs
  |
  |             panic_choreography_error(error);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::ProgramProjection::<hibana::g::Route<hibana::g::Seq<hibana::g::Send<0, 3, hibana::g::Msg<118, ()>>, hibana::g::Send<1, 2, hibana::g::Msg<42, ()>>>, hibana::g::Seq<hibana::g::Send<0, 3, hibana::g::Msg<119, ()>>, hibana::g::Seq<hibana::g::Send<1, 2, hibana::g::Msg<42, ()>>, hibana::g::Send<1, 2, hibana::g::Msg<77, ()>>>>>>::VALIDATION` failed inside this call
  |
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |           ProgramSourceError::ProjectionRouteUnprojectable => panic!(concat!(
  |  _____________________________________________________________-
  | |             "Route unprojectable for this role: invalid, ambiguous endpoint operation, ",
  | |             "or ambiguous first-visible endpoint operation",
  | |         )),
  | |__________- in this macro invocation

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |         let () = Self::VALIDATION;
  |                  ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |         build.image_ref(&ProgramProjection::<Steps>::PROGRAM_REF, ROLE, Self::FACTS)
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |     &RoleProjection::<ROLE, Steps>::IMAGE_REF
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |       let image = const {
  |  _________________^
  | |         if !ProgramProjection::<Steps>::IMAGE.contains_role(ROLE) {
  | |             panic!("projected role is outside the choreography role range");
... |
  | |     };
  | |_____^

note: the above error was encountered while instantiating `fn g::project::<1, Route<Seq<hibana::g::Send<0, 3, Msg<118, ()>>, hibana::g::Send<1, 2, Msg<42, ()>>>, Seq<hibana::g::Send<0, 3, Msg<119, ()>>, Seq<hibana::g::Send<1, 2, Msg<42, ()>>, hibana::g::Send<1, 2, Msg<77, ()>>>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
